RESOLVED FIXED233658
[ Monterey ] fast/images/text-recognition/mac/image-overlay-text-disables-app-highlight-menu-items.html (layout-test) is a constant text failure
https://bugs.webkit.org/show_bug.cgi?id=233658
Summary [ Monterey ] fast/images/text-recognition/mac/image-overlay-text-disables-app...
Robert Jenner
Reported 2021-11-30 13:42:42 PST
fast/images/text-recognition/mac/image-overlay-text-disables-app-highlight-menu-items.html is a constant text failure on Monterey. HISTORY: https://results.webkit.org/?suite=layout-tests&test=fast%2Fimages%2Ftext-recognition%2Fmac%2Fimage-overlay-text-disables-app-highlight-menu-items.html DIFF URL: https://build.webkit.org/results/Apple-Monterey-Release-WK2-Tests/r286311%20(292)/fast/images/text-recognition/mac/image-overlay-text-disables-app-highlight-menu-items-pretty-diff.html TEXT DIFF: -PASS foundTitle1 is true -PASS foundTitle2 is true -PASS Selected image overlay -PASS foundTitle1 is false -PASS foundTitle2 is false -PASS successfullyParsed is true +CONSOLE MESSAGE: TypeError: undefined is not an object (evaluating 'internals.appHighlightContextMenuItemTitles') +FAIL successfullyParsed should be true. Was false. +Some tests failed. TEST COMPLETE - + Hello world this is a test.
Attachments
For EWS (1.60 KB, patch)
2021-12-01 17:20 PST, Wenson Hsieh
no flags
Fix iOS build (2.85 KB, patch)
2021-12-02 11:15 PST, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2021-11-30 13:43:12 PST
Wenson Hsieh
Comment 2 2021-12-01 17:14:56 PST
> +CONSOLE MESSAGE: TypeError: undefined is not an object (evaluating > 'internals.appHighlightContextMenuItemTitles') > +FAIL successfullyParsed should be true. Was false. This test is passing in configurations where ENABLE_APP_HIGHLIGHTS is defined. I'm guessing we just need to upstream ENABLE_APP_HIGHLIGHTS code.
Wenson Hsieh
Comment 3 2021-12-01 17:20:30 PST
Wenson Hsieh
Comment 4 2021-12-02 11:15:55 PST
Created attachment 445750 [details] Fix iOS build
Wenson Hsieh
Comment 5 2021-12-02 12:27:30 PST
(In reply to Wenson Hsieh from comment #2) > > +CONSOLE MESSAGE: TypeError: undefined is not an object (evaluating > > 'internals.appHighlightContextMenuItemTitles') > > +FAIL successfullyParsed should be true. Was false. > > This test is passing in configurations where ENABLE_APP_HIGHLIGHTS is > defined. > > I'm guessing we just need to upstream ENABLE_APP_HIGHLIGHTS code. Verified with a non-internal macOS Monterey WebKit build that this is the only change needed to fix the test.
Wenson Hsieh
Comment 6 2021-12-02 12:57:21 PST
Comment on attachment 445750 [details] Fix iOS build Thanks for the review!
EWS
Comment 7 2021-12-02 13:33:56 PST
Committed r286450 (244792@main): <https://commits.webkit.org/244792@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445750 [details].
Note You need to log in before you can comment on or make changes to this bug.