[ Monterey ] fast/images/text-recognition/mac/image-overlay-text-disables-app-highlight-menu-items.html (layout-test) is a constant text failure https://bugs.webkit.org/show_bug.cgi?id=233658 rdar://problem/85886424

Reviewed by Tim Horton.

Source/WTF:

Define ENABLE_APP_HIGHLIGHTS for iOS 15+ and macOS Monterey+. This ensures that
`internals.appHighlightContextMenuItemTitles` is defined in layout tests on Monterey.

* wtf/PlatformEnableCocoa.h:

Tools:

Add a forward declaration for open source builds.

* TestWebKitAPI/ios/UIKitSPI.h:



Canonical link: https://commits.webkit.org/244792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286450 268f45cc-cd09-0410-ab3c-d52691b4dbfc